name:                ord-graph
version:             0.1.0.0
homepage:            https://github.com/DAHeath/ord-graph
license:             BSD3
license-file:        LICENSE
author:              David Heath
maintainer:          heath.davidanthony@gmail.com
copyright:           2017 David Heath
category:            Data Structures
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Ord.Graph
                     , Data.Ord.Graph.Algorithms
                     , Data.Ord.Graph.AlgorithmsGeneric
                     , Data.Ord.Graph.Algorithms.SearchState
                     , Data.Ord.Graph.Algorithms.HashableQueueState
                     , Data.Ord.Graph.Algorithms.PriorityQueueState
                     , Data.Ord.Graph.Algorithms.Landmarks
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , mtl
                     , monad-loops
                     , lens
                     , bifunctors
                     , QuickCheck
                     , fingertree
                     , unordered-containers
                     , hashable
                     , parallel
                     , safe
  default-language:    Haskell2010
  ghc-options:         -Wall -O2

test-suite ord-graph-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ord-graph
                     , hspec
                     , QuickCheck
                     , lens
                     , containers
                     , hashable
  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

benchmark astar
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test, bench
  main-is:          MainBenchmarkSuite.hs
  build-depends:    base
                  , criterion
                  , random
                  , ord-graph
                  , lens
                  , containers
                  , QuickCheck
                  , lens
                  , unordered-containers
                  , hashable
                  , mtl
  ghc-options:      -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010   

source-repository head
  type:     git
  location: https://github.com/DAHeath/ord-graph 
